@@ -76,9 +76,9 @@ namespace OpenDDS
     {
     }
 
-    Sample_Field::Sample_Field (const char *f, Sample_Base *n)
+    Sample_Field::Sample_Field (Sample_Base *n)
       : data_ (0),
-        format_(f),
+        format_(""),
         len_(0),
         nested_ (n),
         next_(0)
@@ -185,9 +185,10 @@ namespace OpenDDS
                           proto_tree *tree,
                           gint &offset)
     {
+#if 0
       if (tvb->length - offset < this->fixed_length_)
         return; // error! length is not sufficient for this type.
-
+#endif
       offset += this->dissect_i (tvb, pinfo, tree, offset);
     }
 
@@ -198,7 +199,7 @@ namespace OpenDDS
       this->fixed_length_ = 0;
       for (Sample_Field *sf = field_; sf != 0; sf = sf->next_)
         {
-          sf->data_ = data +  this->fixed_length_;
+          sf->data_ = data + this->fixed_length_;
           this->fixed_length_ += sf->length();
         }
       return this->fixed_length_;
@@ -208,6 +209,48 @@ namespace OpenDDS
     Sample_Base::length () const
     {
       return this->fixed_length_;
+    }
+
+
+    //----------------------------------------------------------------------
+
+    Sample_String::Sample_String (const char *label)
+      : Sample_Base ("string")
+    {
+      use_subtree_ = false;
+      size_t len = ACE_OS::strlen(label);
+      if (len > 0)
+        {
+          this->label_ = new char[len+1];
+          ACE_OS::strcpy (this->label_, label);
+        }
+    }
+
+    guint
+    Sample_String::compute_length (const char *data)
+    {
+      this->fixed_length_ =
+        4 + * (reinterpret_cast<const guint32 *>(data));
+      return this->fixed_length_;
+    }
+
+    size_t
+    Sample_String::dissect_i (tvbuff_t *tvb,
+                              packet_info *,
+                              proto_tree *tree,
+                              gint offset)
+    {
+      gint remainder = tvb->length - offset;
+      char * data = (char *)ep_tvb_memdup(tvb, offset, remainder);
+      guint32 *len = (reinterpret_cast< guint32 * >(data));
+      char * clone = new char[*len + 1];
+      ACE_OS::memcpy (clone, data+4, *len);
+      clone[*len] = '\0';
+      proto_tree_add_text (tree, tvb, offset, (*len) + 4,
+                           "%s: %s", this->label_, clone);
+      delete [] clone;
+
+      return (*len) + 4;
     }
 
 
@@ -234,6 +277,152 @@ namespace OpenDDS
          "LocationInfo",
          "locationinfo");
       proto_register_subtree_array(ett, array_length(ett));
+
+    }
+
+#if 0
+
+#pragma DCPS_DATA_TYPE "PlanInfo"
+#pragma DCPS_DATA_KEY "PlanInfo flight_id1"
+#pragma DCPS_DATA_KEY "PlanInfo flight_id2"
+struct PlanInfo {
+  unsigned long flight_id1;
+  unsigned long flight_id2;
+  string flight_name;
+  string tailno;
+};
+
+#endif
+
+    PlanInfo_Dissector::PlanInfo_Dissector ()
+      : Sample_Base ("IDL:PlanInfoTypeSupport:1.0")
+    {
+      Sample_Dissector_Manager::instance().add (*this);
+
+      this->add_field (new Sample_Field ("flight_id1: %u", 4));
+      this->add_field (new Sample_Field ("flight_id2: %u", 4));
+      this->add_field (new Sample_Field (new Sample_String ("flight_name")));
+      this->add_field (new Sample_Field (new Sample_String ("tailno")));
+
+      gint *ett[] = {
+        &ett_payload_
+      };
+
+      proto_ =
+        proto_register_protocol
+        ("Sample Payload: PlanInfo",
+         "PlanInfo",
+         "planinfo");
+      proto_register_subtree_array(ett, array_length(ett));
+
+    }
+
+
+#if 0
+
+#pragma DCPS_DATA_TYPE "MoreInfo"
+#pragma DCPS_DATA_KEY "MoreInfo flight_id1"
+struct MoreInfo {
+  unsigned long flight_id1;
+  string more;
+};
+
+#endif
+
+   MoreInfo_Dissector::MoreInfo_Dissector ()
+      : Sample_Base ("IDL:MoreInfoTypeSupport:1.0")
+    {
+      Sample_Dissector_Manager::instance().add (*this);
+
+      this->add_field (new Sample_Field ("flight_id1: %u", 4));
+      this->add_field (new Sample_Field (new Sample_String ("more")));
+
+      gint *ett[] = {
+        &ett_payload_
+      };
+
+      proto_ =
+        proto_register_protocol
+        ("Sample Payload: MoreInfo",
+         "MoreInfo",
+         "moreinfo");
+      proto_register_subtree_array(ett, array_length(ett));
+
+    }
+
+#if 0
+
+#pragma DCPS_DATA_TYPE "UnrelatedInfo"
+// testing cross-joins, this has no keys
+struct UnrelatedInfo {
+  string misc;
+};
+
+#endif
+
+    UnrelatedInfo_Dissector::UnrelatedInfo_Dissector ()
+      : Sample_Base ("IDL:UnrelatedInfoTypeSupport:1.0")
+    {
+      Sample_Dissector_Manager::instance().add (*this);
+
+      this->add_field (new Sample_Field (new Sample_String ("misc")));
+
+      gint *ett[] = {
+        &ett_payload_
+      };
+
+      proto_ =
+        proto_register_protocol
+        ("Sample Payload: UnrelatedInfo",
+         "UnrelatedInfo",
+         "unrelatedinfo");
+      proto_register_subtree_array(ett, array_length(ett));
+
+    }
+
+#if 0
+
+#pragma DCPS_DATA_TYPE "Resulting"
+#pragma DCPS_DATA_KEY "Resulting flight_id1"
+#pragma DCPS_DATA_KEY "Resulting flight_id2"
+struct Resulting {
+  unsigned long flight_id1;
+  unsigned long flight_id2;
+  string flight_name;
+  long x;
+  long y;
+  long height;
+  string more;
+  string misc;
+};
+
+#endif
+
+    Resulting_Dissector::Resulting_Dissector ()
+      : Sample_Base ("IDL:ResultingTypeSupport:1.0")
+    {
+      Sample_Dissector_Manager::instance().add (*this);
+
+      gint *ett[] = {
+        &ett_payload_
+      };
+
+      this->add_field (new Sample_Field ("flight_id1: %u", 4));
+      this->add_field (new Sample_Field ("flight_id2: %u", 4));
+      this->add_field (new Sample_Field (new Sample_String ("flight_name")));
+      this->add_field (new Sample_Field ("x: %d", 4));
+      this->add_field (new Sample_Field ("y: %d", 4));
+      this->add_field (new Sample_Field ("height: %d", 4));
+      this->add_field (new Sample_Field (new Sample_String ("more")));
+      this->add_field (new Sample_Field (new Sample_String ("misc")));
+
+      proto_ =
+        proto_register_protocol
+        ("Sample Payload: Resulting",
+         "Resulting",
+         "resulting");
+      proto_register_subtree_array(ett, array_length(ett));
+
 
     }
 
