@@ -1,3 +1,10 @@
+Fri Jul  8 14:16:52 UTC 2011  Phil Mesnier  <mesnier_p@ociweb.com>
+
+        * tools/dissector/sample_base.h:
+        * tools/dissector/sample_base.cpp:
+
+          Further generalization of the sample dissection. 
+        
 Fri Jul  8 13:25:39 UTC 2011  Adam Mitz  <mitza@ociweb.com>
 
         * dds/DCPS/DomainParticipantImpl.cpp:
